force-app/main/default/objects/Task_Template__c/Task_Template__c.object-meta.xml
<CustomObject>
    <label>System Template</label>
    <nameField>
        <label>Task Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>