force-app/main/default/objects/Task_Template__c/fields/Clinic__c.field-meta.xml
<CustomField>
    <fullName>Clinic__c</fullName>
    <label>Clinic</label>
    <referenceTo>Clinics__c</referenceTo>
    <relationshipName>Task_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>