force-app/main/default/objects/Task_Template__c/fields/Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type__c</fullName>
    <label>Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cycle_Types</valueSetName>
    </valueSet>
</CustomField>