force-app/main/default/objects/Task_Template__c/fields/Cycle_Type_Multi_Select__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type_Multi_Select__c</fullName>
    <label>Cycle Type Multi-Select</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IVF Cycle</fullName>
            </value>
            <value>
                <fullName>FET Cycle</fullName>
            </value>
            <value>
                <fullName>Fresh Egg Donor Cycle</fullName>
            </value>
            <value>
                <fullName>VOT Cycle</fullName>
            </value>
            <value>
                <fullName>Lab Only Cycle</fullName>
            </value>
            <value>
                <fullName>OI Cycle</fullName>
            </value>
            <value>
                <fullName>Egg Freeze Cycle</fullName>
            </value>
            <value>
                <fullName>IUI Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>