force-app/main/default/objects/Task_Template__c/fields/Discription__c.field-meta.xml
<CustomField>
    <fullName>Discription__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>