force-app/main/default/objects/Task_Template__c/fields/Letter_Text__c.field-meta.xml
<CustomField>
    <fullName>Letter_Text__c</fullName>
    <label>Letter Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>