force-app/main/default/objects/Task_Template__c/fields/Template_Owner__c.field-meta.xml
<CustomField>
    <fullName>Template_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Owner</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>System Templates</relationshipLabel>
    <relationshipName>System_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>