force-app/main/default/objects/Task_Template__c/fields/Text_Template__c.field-meta.xml
<CustomField>
    <fullName>Text_Template__c</fullName>
    <label>Text Template</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>