force-app/main/default/objects/Task_Template__c/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <label>Trigger Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day 1</fullName>
            </value>
            <value>
                <fullName>Adverse Event</fullName>
            </value>
            <value>
                <fullName>Biopsy Event</fullName>
            </value>
            <value>
                <fullName>Cell Wash Event</fullName>
            </value>
            <value>
                <fullName>Change Over</fullName>
            </value>
            <value>
                <fullName>Day 2 Embryo Assessment</fullName>
            </value>
            <value>
                <fullName>Day 3 Embryo Assessment</fullName>
            </value>
            <value>
                <fullName>Day 4 Embryo Assessment</fullName>
            </value>
            <value>
                <fullName>Day 5 Embryo Assessment</fullName>
            </value>
            <value>
                <fullName>Day 6 Embryo Assessment</fullName>
            </value>
            <value>
                <fullName>Day 7 Embryo Assessment</fullName>
            </value>
            <value>
                <fullName>Denuding/Coc Trimming</fullName>
            </value>
            <value>
                <fullName>Egg Donation Event</fullName>
            </value>
            <value>
                <fullName>Egg Insemination Event</fullName>
            </value>
            <value>
                <fullName>Egg Thaw Event</fullName>
            </value>
            <value>
                <fullName>Egg Vitrification Event</fullName>
            </value>
            <value>
                <fullName>Embryo Thaw Event</fullName>
            </value>
            <value>
                <fullName>Embryo Transfer Event</fullName>
            </value>
            <value>
                <fullName>Embryo Vitrification Event</fullName>
            </value>
            <value>
                <fullName>Failed Embryo Transfer Event</fullName>
            </value>
            <value>
                <fullName>Fert Check</fullName>
            </value>
            <value>
                <fullName>Follicle Scan</fullName>
            </value>
            <value>
                <fullName>Glue Move</fullName>
            </value>
            <value>
                <fullName>IUI Event</fullName>
            </value>
            <value>
                <fullName>LAH Event</fullName>
            </value>
            <value>
                <fullName>Live Birth Event</fullName>
            </value>
            <value>
                <fullName>OPU Event</fullName>
            </value>
            <value>
                <fullName>OPU Prep Event</fullName>
            </value>
            <value>
                <fullName>Post Thaw Expansion Assessment</fullName>
            </value>
            <value>
                <fullName>Pregnancy Scan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>