force-app/main/default/objects/Task_Template__c/recordTypes/Checklist_Template.recordType-meta.xml
<RecordType>
    <fullName>Checklist_Template</fullName>
    <active>true</active>
    <label>Cycle Creation Checklist Template</label>
</RecordType>