force-app/main/default/objects/Task_Template__c/recordTypes/Event_Triggered_Template.recordType-meta.xml
<RecordType>
    <fullName>Event_Triggered_Template</fullName>
    <active>true</active>
    <label>Event Triggered Template</label>
</RecordType>