force-app/main/default/objects/Task_Template__c/recordTypes/Letter.recordType-meta.xml
<RecordType>
    <fullName>Letter</fullName>
    <active>true</active>
    <label>Letter</label>
</RecordType>