force-app/main/default/objects/Task_Template__c/recordTypes/Medication_Templates.recordType-meta.xml
<RecordType>
    <fullName>Medication_Templates</fullName>
    <active>true</active>
    <label>Medication Templates</label>
</RecordType>