force-app/main/default/objects/Task_Template__c/recordTypes/Pathology_Templates.recordType-meta.xml
<RecordType>
    <fullName>Pathology_Templates</fullName>
    <active>true</active>
    <label>Pathology Templates</label>
</RecordType>