force-app/main/default/objects/Task_Template__c/recordTypes/Patient_Checklist_Template.recordType-meta.xml
<RecordType>
    <fullName>Patient_Checklist_Template</fullName>
    <active>true</active>
    <label>Patient Checklist Template</label>
</RecordType>