force-app/main/default/objects/Task_Template__c/recordTypes/Protocol_Templates.recordType-meta.xml
<RecordType>
    <fullName>Protocol_Templates</fullName>
    <active>true</active>
    <label>Protocol Templates</label>
</RecordType>