force-app/main/default/objects/Task_Template__c/recordTypes/Service_Item_Templates.recordType-meta.xml
<RecordType>
    <fullName>Service_Item_Templates</fullName>
    <active>true</active>
    <label>Service Item Templates</label>
</RecordType>