force-app/main/default/objects/Task_Template__c/recordTypes/Task_Templates.recordType-meta.xml
<RecordType>
    <fullName>Task_Templates</fullName>
    <active>true</active>
    <label>Task Templates</label>
</RecordType>