force-app/main/default/objects/Task_Template__c/recordTypes/Terms_and_Conditions.recordType-meta.xml
<RecordType>
    <fullName>Terms_and_Conditions</fullName>
    <active>true</active>
    <label>Terms and Conditions</label>
</RecordType>