force-app/main/default/objects/Task_Template__c/recordTypes/Text_Template.recordType-meta.xml
<RecordType>
    <fullName>Text_Template</fullName>
    <active>true</active>
    <label>Text Template</label>
</RecordType>