force-app/main/default/objects/Task_Template__c/listViews/All_System_Templates.listView-meta.xml
<ListView>
    <fullName>All_System_Templates</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Trigger_Event__c</columns>
    <columns>Cycle_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All System Templates</label>
</ListView>